Added images for Portfolio: rpg_game, hangman, rockpaper_scissors, rutgers info widget, trivia game, and made changes to index.html, portfolio, and contact. which includes adding the forms, and adding images

--- a/Assets/Portfolio.html
+++ b/Assets/Portfolio.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
 <head>
-	<title>Portfolio</title>
+	<title>Emily Sun Portfolio</title>
 </head>
 
 <body>
+	<div class="namebar">
+		<h2>Emily Sun</h2>
+	</div>
+	
+	<div class="topbar">
+		<ul>
+			<li><a href="Assets/index.html">About<a></li>
+			<li><a href="Assets/index.html">Portfolio<a></li>
+			<li><a href="Assets/index.html">Contact<a></li>
+		</ul>
+	</div>
+	
+	<div class="portfoliobox">
+		<h2>Portfolio</h2>
+		<img src="images/hangman.jpg">
+		<img src="images/RPG_game.jpg">
+		<img src="images/trivia_game.jpg">
+		<img src="images/rutgers_info_widget.jpg">
+		<img src="images/rock_paper_scissors.jpg">
+	</div>
 
-
-
+	<div>
+		<h3>Connect With Me</h3>
+		<img src="images/github.png">
+		<img src="images/linkedin.png">
+		<img src="images/stackoverflow.png">
+	</div>
+	
+	<div>
+	<footer>
+		<p>&#169;Copyright Emily Sun</p>
+	</footer>
+	</div>
 </body>
