--- a/Assets/index.html
+++ b/Assets/index.html
@@ -28,4 +28,10 @@
 		<img src="images/linkedin.png">
 		<img src="images/stackoverflow.png">
 	</div>
+	
+	<div>
+	<footer>
+		<p>&#169;Copyright Emily Sun</p>
+	</footer>
+	</div>
 </body>
