--- a/Assets/Contact.html
+++ b/Assets/Contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Contact</title>
+	<title>Emily Sun Portfolio</title>
 </head>
 
 <body>
@@ -16,16 +16,37 @@
 		</ul>
 	</div>
 	
-	<div class="aboutbox">
-		<h2>About Me</h2>
-		<p></p>
-		<p></p>
+	<div class="contactform">
+		<h2>Contact</h2>
+		<form>
+			Name:<br>
+			<input type="text" name="name" placeholder="John Smith">
+			
+			<br><br>
+			
+			Email:<br>
+			<input type="email" name="email" placeholder="example@gmail.com">
+			
+			<br><br>
+			
+			Message:<br>
+			<textarea name="message" rows="20" cols="50"></textarea>
+			
+			
+			
+		</form>
 	</div>
-	
+
 	<div>
 		<h3>Connect With Me</h3>
 		<img src="images/github.png">
 		<img src="images/linkedin.png">
 		<img src="images/stackoverflow.png">
+	</div>
+	
+	<div>
+	<footer>
+		<p>&#169;Copyright Emily Sun</p>
+	</footer>
 	</div>
 </body>
