added aside tag in porfolio page

--- a/Assets/Portfolio.html
+++ b/Assets/Portfolio.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
 	<title>Emily Sun Portfolio</title>
+	<style>
+		
+	</style>
 </head>
 
 <body>
@@ -18,11 +21,40 @@
 	
 	<div class="portfoliobox">
 		<h2>Portfolio</h2>
-		<img src="images/hangman.jpg">
-		<img src="images/RPG_game.jpg">
-		<img src="images/trivia_game.jpg">
-		<img src="images/rutgers_info_widget.jpg">
-		<img src="images/rock_paper_scissors.jpg">
+		<section>
+			<img src="images/hangman.jpg">
+			<aside>
+				<p>Hangman</p>
+			</aside>
+		</section>
+		
+		<section>
+			<img src="images/RPG_game.jpg">
+			<aside>
+				<p>RPG Game</p>
+			</aside>
+		</section>
+		
+		<section>
+			<img src="images/trivia_game.jpg">
+			<aside>
+				<p>Trivia Game</p>
+			</aside>
+		</section>
+		
+		<section>
+			<img src="images/rutgers_info_widget.jpg">
+			<aside>
+				<p>Rutgers Info Widget</p>
+			</aside>
+		</section>
+		
+		<section>
+			<img src="images/rock_paper_scissors.jpg">
+			<aside>
+				<p>Rock Paper Scissors</p>
+			</aside>
+		</section>
 	</div>
 
 	<div>
